- Modified identifiability constrains for no spikes case.

version 0.6.6: (2016-07-27)
- First working version of no spikes case (constrained mu's)

version 0.6.7: (2016-07-28)
- Minor changes in the validity checks of 'BASiCS_D_Data' objects

version 0.6.8: (2016-07-28)
- Sequential updates for mu in MCMC (no spikes case only)

version 0.6.9: (2016-08-01)
- Dirichlet-based proposals for mu in MCMC (no spikes case only)

version 0.7.0: (2016-08-02)
- Sequential updates for mu in MCMC (no spikes case only)

version 0.7.1: (2016-08-05)
- Random reference in sequential updates for mu (no spikes case only)

version 0.7.2: (2016-08-05)
- Same as v 0.7.2 but more efficient

version 0.7.3: (2016-08-08)
- Reference set to be the gene closest to the average (no spikes case only)

version 0.7.4: (2016-08-09)
- Modified constrain to include 'expressed' genes only (no spikes case only)

version 0.7.5: (2016-08-10)
- Modified constrain to include 'expressed' genes only (no spikes case only)

version 0.7.6: (2016-08-11)
- As v 0.7.5 but with extra argument for constrain limit (no spikes case only)

version 0.7.7: (2016-08-12)
- ConstrainType = 3 implemented (no spikes case only)

version 0.7.8: (2016-08-15)
- ConstrainType = 4 implemented (no spikes case only)

version 0.7.9: (2016-10-31)
- C++ code cleaned regarding parameter updates (no spikes case)
- Updated email in description file and welcome message
- 'BASiCS_MCMC' modified so that "log-normal" is the default value for PriorDelta

version 0.7.10: (2016-10-31)
- Minor changes in 'BASiCS_MCMC' to have more meaningful variable names
- Minor changes in 'BASiCS_MCMC' to make no-spikes case functional 

version 0.7.11: (2016-10-31)
- Comments added to clarify no spikes case in 'BASiCS_MCMC' function. 

version 0.7.12: (2016-11-01)
- Change in defaul value of 'PriorDelta' (v 0.7.9) has been reverted for reproducibility issues. Message added to the start of the function so that users are aware of making the change. 